# presswall

./: .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  README.md  biome.jsonc  drizzle.config.ts  middleware.ts  package.json  shopify-env.d.ts  shopify.app.toml  shopify.web.toml  tsconfig.json
.agents/: shopify-dev-prod-urls.md
app/: globals.css  layout.tsx  page.tsx
components/: crisp-chat.tsx  session-bootstrap.tsx  theme-provider.tsx
drizzle/: 0000_slimy_barracuda.sql  0001_onboarding_completed_at.sql
hooks/: use-presswall-editor.ts  use-presswall-strip-items.test.ts  use-presswall-strip-items.tsx
lib/: admin-fetch.ts  admin-navigation.test.ts  admin-navigation.ts  admin-routing.test.tsx  app-url.test.ts  app-url.ts  auth-helpers.ts  authenticate-admin.ts  authenticate-page.ts  banner-assignment-service.ts  banner-page-context.test.ts  banner-page-context.ts  banner-service.ts  build-storefront-payload.test.ts  build-storefront-payload.ts  bundled-publishers.ts  canonical-shop-banner.test.ts  canonical-shop-banner.ts  crisp-config.test.ts  crisp-config.ts  custom-banner-name.test.ts  custom-banner-name.ts  custom-logo-service.ts  custom-template-service.test.ts  custom-template-service.ts  editor-app-window.test.ts  editor-app-window.ts  editor-save-bar.test.ts  embedded-headers.ts  ensure-offline-session.test.ts  ensure-offline-session.ts  exit-iframe.ts  fetch-presswall-client-data.ts  hydrate-banner-selections.ts  legacy-banner-migration.ts  logo-guidance.ts  (+54 more)
tools/trim-logos/: Cargo.toml
tools/trim-logos/src/: main.rs
(+120 files in other folders)
